tests/ui/attributes/invalid_macro_export_argument.stderr
error[E0805]: malformed `macro_export` attribute input
  --> $DIR/invalid_macro_export_argument.rs:1:1
   |
LL | #[macro_export(hello, world)]
   | ^^^^^^^^^^^^^^--------------^
   |               |
   |               expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[macro_export(hello, world)]
LL + #[macro_export(local_inner_macros)]
   |
LL - #[macro_export(hello, world)]
LL + #[macro_export]
   |

error[E0539]: malformed `macro_export` attribute input
  --> $DIR/invalid_macro_export_argument.rs:8:1
   |
LL | #[macro_export(not_local_inner_macros)]
   | ^^^^^^^^^^^^^^^----------------------^^
   |                |
   |                the only valid argument here is `local_inner_macros`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[macro_export(not_local_inner_macros)]
LL + #[macro_export(local_inner_macros)]
   |
LL - #[macro_export(not_local_inner_macros)]
LL + #[macro_export]
   |

error[E0805]: malformed `macro_export` attribute input
  --> $DIR/invalid_macro_export_argument.rs:24:1
   |
LL | #[macro_export()]
   | ^^^^^^^^^^^^^^--^
   |               |
   |               expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[macro_export(local_inner_macros)]
   |                ++++++++++++++++++
LL - #[macro_export()]
LL + #[macro_export]
   |

error[E0539]: malformed `macro_export` attribute input
  --> $DIR/invalid_macro_export_argument.rs:31:1
   |
LL | #[macro_export("blah")]
   | ^^^^^^^^^^^^^^^------^^
   |                |
   |                the only valid argument here is `local_inner_macros`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[macro_export("blah")]
LL + #[macro_export(local_inner_macros)]
   |
LL - #[macro_export("blah")]
LL + #[macro_export]
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
